Hiding my development of the new site content. Use index.html for the 'Coming Soon...' page the public will see. Use home.html for the content that is under development.

--- a/index.html
+++ b/index.html
@@ -1,40 +1,11 @@
 ---
-layout: default
+layout: temp
 ---
 
-{% capture intro %}
-{% include content/cla-intro.md %}
-{% endcapture %}
-
-{% capture contribute %}
-{% include content/contribute.md %}
-{% endcapture %}
-
-{% capture faq %}
-{% include content/faq.md %}
-{% endcapture %}
-
 <section>
-  <nav>
-    <ul>
-      <li><a href="#introduction_to_the_cla">Introduction</a></li>
-      <li><a href="#contribute">Contribute</a></li>
-      <li><a href="#frequently_asked_questions">FAQ</a></li>
-    </ul>
-  </nav>
-</section>
-
-<section>
-  {{ intro | markdownify }}
-  <p class="toplink"><a href="#top">Top</a></p>
-</section>
-
-<section>
-  {{ contribute | markdownify }}
-  <p class="toplink"><a href="#top">Top</a></p>
-</section>
-
-<section>
-  {{ faq | markdownify }}
-  <p class="toplink"><a href="#top">Top</a></p>
+  <h2>Coming Soon...</h2>
+  <p>Keep an eye on this space for information about the upcoming open sourcing of the <span class="nowrap">Cortical Learning Algorithm</span> used by Numenta to create our flagship product, <a href="https://www.numenta.com/product.html" target="_new">Grok</a>.</p>
+  <div align="center">
+    <img src="http://upload.wikimedia.org/wikipedia/en/b/bd/OnInt.png"/>
+  </div>
 </section>
