Changing verbiage to NuPIC from opencla. Added favicon.

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 {% capture intro %}
-{% include content/cla-intro.md %}
+{% include content/nupic-intro.md %}
 {% endcapture %}
 
 {% capture contribute %}
@@ -17,7 +17,7 @@ layout: default
 <section>
   <nav>
     <ul>
-      <li><a href="#introduction_to_the_cla">Introduction</a></li>
+      <li><a href="#introduction_to_nupic">Introduction</a></li>
       <li><a href="#contribute">Contribute</a></li>
       <li><a href="#frequently_asked_questions">FAQ</a></li>
     </ul>
