Changed verbiage on temporary landing page.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: temp
 
 <section>
   <h2>Coming Soon...</h2>
-  <p>Keep an eye on this space for information about the upcoming open sourcing of the <span class="nowrap"><a href="https://www.numenta.com/technology.html#cla-whitepaper" target="_new">Cortical Learning Algorithm</a></span> used by Numenta to create our flagship product, <a href="https://www.numenta.com/product.html" target="_new">Grok</a>.</p>
+  <p>Keep an eye on this space for information about the upcoming open sourcing of the <span class="nowrap"><strong>Numenta Platform for Intelligent Computing</strong></span>, which includes the the <a href="https://www.numenta.com/technology.html#cla-whitepaper" target="_new">Cortical Learning Algorithm</a> used by Numenta to create our flagship product, <a href="https://www.numenta.com/product.html" target="_new">Grok</a>.</p>
   <div align="center">
     <a href="https://www.numenta.com/technology.html#on-intelligence" target="_new">
         <img src="http://upload.wikimedia.org/wikipedia/en/b/bd/OnInt.png"/>
